<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_home"
            android:enabled="true"

            android:icon="@drawable/munu_selected"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calc"
            android:enabled="true"

            android:icon="@drawable/calc_selected"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_recipes"
            android:enabled="true"

            android:icon="@drawable/recipie_selected"
            android:title="@string/ricettario" />
        <item
            android:id="@+id/nav_fragment_grafici"
            android:enabled="true"

            android:icon="@drawable/grafici_selected"
            android:title="@string/nav_grafici" />

        <item
            android:id="@+id/nav_user"
            android:enabled="true"

            android:icon="@drawable/user_selected"
            android:title="@string/menu_gallery" />



</menu>