<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.material3app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addFragment"
            app:destination="@id/addFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.material3app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.material3app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.material3app.AddFragment"
        android:label="fragment_add"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>