<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutGrafici"
    tools:context=".ui.graph.GraficiMensiliFragment">


    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@null"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintEnd_toEndOf="@+id/progressBar3"
        app:layout_constraintTop_toBottomOf="@+id/progressBar3"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/titoloMese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:text="@string/settembre"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/titoloMese"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/titoloPb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giorni_obiettivo_raggiunto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar1"
        app:layout_constraintStart_toStartOf="@+id/progressBar1" />

    <TextView
        android:id="@+id/infoPb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_30"
        app:layout_constraintBottom_toTopOf="@+id/progressBar1"
        app:layout_constraintEnd_toEndOf="@+id/progressBar1" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieChart" />

    <TextView
        android:id="@+id/titoloPb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giorni_obiettivo_non_raggiunto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintStart_toStartOf="@+id/progressBar2" />

    <TextView
        android:id="@+id/infoPb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_30"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="@+id/progressBar2" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1" />

    <TextView
        android:id="@+id/titoloPb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giorni_non_inseriti"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar3"
        app:layout_constraintStart_toStartOf="@+id/progressBar3" />

    <TextView
        android:id="@+id/infoPb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_30"
        app:layout_constraintBottom_toTopOf="@+id/progressBar3"
        app:layout_constraintEnd_toEndOf="@+id/progressBar3" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <ImageButton
        android:id="@+id/calendarMonthYear"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintEnd_toEndOf="@+id/titoloMese"
        app:layout_constraintTop_toBottomOf="@+id/titoloMese"
        tools:ignore="TouchTargetSizeCheck"
        android:contentDescription="@string/calendario"/>

    <TextView
        android:id="@+id/annoSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2022"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/titoloMese"
        app:layout_constraintTop_toBottomOf="@+id/titoloMese" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dettagli_mensili"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/titoloMese"
        app:layout_constraintTop_toTopOf="@+id/pieChart" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titoloBarChart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offset_giornaliero"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/barChart"
                app:layout_constraintStart_toStartOf="@+id/barChart" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>