<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment">

    <TextView
        android:id="@+id/Saluto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="24dp"
        android:text="@string/Saluto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardUser"
        android:layout_width="352dp"
        android:layout_height="315dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Saluto"
        android:backgroundTint="?attr/colorSecondaryContainer"
        style="@style/Widget.Material3.CardView.Outlined"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.Material3.CardView.Outlined"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:contentDescription="@string/immagine_utente"
                    android:id="@+id/imageUser"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    tools:src="@drawable/avatar"
                    android:backgroundTint="?attr/colorPrimary"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                     />
            </com.google.android.material.card.MaterialCardView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="#c0c0c0"
                app:layout_constraintBottom_toTopOf="@+id/NomeUtente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardImage" />

            <TextView
                android:id="@+id/NomeUtente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/nome_utente"
                app:layout_constraintBottom_toTopOf="@+id/MailUtente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/MailUtente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/placeholder_mail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NomeUtente" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@+id/cardUser">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titolo_obiettivo"
            android:layout_margin="24dp"
            android:layout_gravity="fill_horizontal"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/ObiettivoCaloricoAttuale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2500"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/kCalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/kcalorie"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/ObiettivoCaloricoAttuale"
                app:layout_constraintTop_toTopOf="@+id/ObiettivoCaloricoAttuale" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>