<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.CalcolaFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CardCalcolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.Material3.CardView.Filled">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Sesso"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/sesso"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/menu"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Eta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="40dp"
                android:text="@string/eta"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/Sesso"
                app:layout_constraintTop_toBottomOf="@id/Sesso" />

            <TextView
                android:id="@+id/Peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/peso"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/Sesso"
                app:layout_constraintTop_toBottomOf="@id/Eta" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sesso"
                app:layout_constraintBottom_toBottomOf="@+id/Sesso"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/Sesso"
                app:layout_constraintTop_toTopOf="@+id/Sesso">

                <AutoCompleteTextView
                    android:id="@+id/dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:labelFor="@id/dropdown"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                android:minWidth="70dp"
                app:layout_constraintBottom_toBottomOf="@+id/Peso"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Sesso"
                app:layout_constraintTop_toTopOf="@+id/Peso">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextInputPeso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EtaTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/eta"
                android:minWidth="60dp"
                app:layout_constraintBottom_toBottomOf="@+id/Eta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Sesso"
                app:layout_constraintTop_toTopOf="@+id/Eta">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/editTextInputEta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ButtonCalcola"

                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_margin="40dp"
                android:text="@string/calcola"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPeso"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextCalorieObiettivo"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/calorie_obiettivo"
        android:inputType="number"
        android:minWidth="70dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/AnnullaCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardCalcolo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputCalorieObiettivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/AccettaCalc"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:text="@string/accetta"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/AnnullaCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/AnnullaCalc"
        app:layout_constraintTop_toBottomOf="@+id/editTextCalorieObiettivo"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/AnnullaCalc"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:backgroundTint="?attr/colorTertiaryContainer"
        android:text="@string/annulla"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AccettaCalc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCalorieObiettivo"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>